--- a/CSS/default.css
+++ b/CSS/default.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('https://i.imgur.com/XcnUScs.png') no-repeat center center fixed;
+    background: url('') no-repeat center center fixed;
     background-size: cover;
     font-size: 12px;
     overflow: auto;
